add static chart using chartjs

--- a/tslist.html
+++ b/tslist.html
@@ -10,8 +10,12 @@
 		    $('#tslist').DataTable( {
 		    	"paging": false,
 		    	"info": false,
+		    	// disable initioal ordering
+		    	// "order": [],
 		        "ajax": {
 		            "url": "tslist.json",
+		            // same loading speed
+		            // "deferRender": true,
 		            "dataSrc": ""
 		        },
 		        
