--- a/chart.html
+++ b/chart.html
@@ -15,41 +15,59 @@
 
 
 	<script>
-		var randomScalingFactor = function(){ return Math.round(Math.random()*100)};
-		var lineChartData = {
-			labels : ["January","February","March","April","May","June","July"],
-			datasets : [
-				{
-					label: "My First dataset",
-					fillColor : "rgba(220,220,220,0.2)",
-					strokeColor : "rgba(220,220,220,1)",
-					pointColor : "rgba(220,220,220,1)",
-					pointStrokeColor : "#fff",
-					pointHighlightFill : "#fff",
-					pointHighlightStroke : "rgba(220,220,220,1)",
-					// CFTWORK T_USR
-					data : [3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3767]
-				},
-				{
-					label: "My Second dataset",
-					fillColor : "rgba(151,187,205,0.2)",
-					strokeColor : "rgba(151,187,205,1)",
-					pointColor : "rgba(151,187,205,1)",
-					pointStrokeColor : "#fff",
-					pointHighlightFill : "#fff",
-					pointHighlightStroke : "rgba(151,187,205,1)",
-					// CFTWORK I_USR
-					data : [2527,2527,2527,2527,2528,2528,2528,2528,2528,2528,2528,2528,2528,2528,2528,2528,2654,2655]
+		// http://microbuilder.io/blog/2016/01/10/plotting-json-data-with-chart-js.html
+
+		var data = [];
+		function drawChart() {
+				
+		
+			var jsonData = $.ajax({
+    			url: '/api/chart/dbname/CFTWORK/tsname/T_USR',
+    			dataType: 'json'
+  			}).done(function (results) {
+  				data = results;
+				var lineChartData = {
+					// labels : ["January","February","March","April","May","June","July"],
+					labels : results.labels,
+					datasets : [
+						{
+							label: "My First dataset",
+							fillColor : "rgba(220,220,220,0.2)",
+							strokeColor : "rgba(220,220,220,1)",
+							pointColor : "rgba(220,220,220,1)",
+							pointStrokeColor : "#fff",
+							pointHighlightFill : "#fff",
+							pointHighlightStroke : "rgba(220,220,220,1)",
+							// CFTWORK T_USR
+							// data : [3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3765,3767]
+							data : results.values
+						}
+						// ,{
+						// 	label: "My Second dataset",
+						// 	fillColor : "rgba(151,187,205,0.2)",
+						// 	strokeColor : "rgba(151,187,205,1)",
+						// 	pointColor : "rgba(151,187,205,1)",
+						// 	pointStrokeColor : "#fff",
+						// 	pointHighlightFill : "#fff",
+						// 	pointHighlightStroke : "rgba(151,187,205,1)",
+						// 	// CFTWORK I_USR
+						// 	data : [2527,2527,2527,2527,2528,2528,2528,2528,2528,2528,2528,2528,2528,2528,2528,2528,2654,2655]
+						// }
+					]
+
 				}
-			]
+				var ctx = document.getElementById("canvas").getContext("2d");
+				window.myLine = new Chart(ctx).Line(lineChartData, {
+					responsive: true
+				});
+			});
 
 		}
+		
+	
 
 	window.onload = function(){
-		var ctx = document.getElementById("canvas").getContext("2d");
-		window.myLine = new Chart(ctx).Line(lineChartData, {
-			responsive: true
-		});
+		drawChart()
 	}
 
 
