add route parameters to /tslist/... and /api/tslist/..., change json route path

--- a/tslist.html
+++ b/tslist.html
@@ -13,7 +13,8 @@
 		    	// disable initioal ordering
 		    	// "order": [],
 		        "ajax": {
-		            "url": "tslist.json",
+		            // "url": "tslist.json",
+		            "url": "http://127.0.0.1:8080/" + "api" + window.location.pathname,
 		            // same loading speed
 		            // "deferRender": true,
 		            "dataSrc": ""
