--- a/chart.html
+++ b/chart.html
@@ -22,7 +22,8 @@
 				
 		
 			var jsonData = $.ajax({
-    			url: '/api/chart/dbname/CFTWORK/tsname/T_USR',
+    			// url: '/api/chart/dbname/CFTWORK/tsname/T_USR',
+    			url: '/api/' + window.location.pathname,
     			dataType: 'json'
   			}).done(function (results) {
   				data = results;
@@ -59,6 +60,8 @@
 				var ctx = document.getElementById("canvas").getContext("2d");
 				window.myLine = new Chart(ctx).Line(lineChartData, {
 					responsive: true
+					// ,scaleBeginAtZero : true
+					// ,bezierCurve: false
 				});
 			});
 
