remove fmt.printf, little logging improment for csv parsing

--- a/tslistWithChart.html
+++ b/tslistWithChart.html
@@ -88,6 +88,8 @@
 					// ,bezierCurve: false
 					// ,showScale: false
 					// ,scaleShowLabels: false
+					// ,datasetStroke : false
+					// ,datasetFill : false
 				});
 			});
 		}
